[package]
name = "gitevents_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
eyre = "0.6.8"
futures = "0.3.26"
tokio = { version = "1.25.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.9.4", features = ["signal"] }
tracing = { version = "0.1.37", features = ["log", "async-await"] }
uuid = { version = "1.3.0", features = ["v4"] }
